@@ -1,5 +1,7 @@
 package com.ilario.sparkmart.controllers;
 
+import com.ilario.sparkmart.utility.FileUploadUtil;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -10,27 +12,40 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Objects;
 
 @RestController
 @RequestMapping("/images")
 public class ImageController {
 
-    @GetMapping("/brand/{imageName}")
-    public ResponseEntity<byte[]> GetBrandImage(@PathVariable String imageName) throws IOException {
-        Resource resource = new ClassPathResource("images/brand-photos/" + imageName);
-        System.out.println(resource);
-        byte[] imageBytes = Files.readAllBytes(Path.of(resource.getURI()));
+    private Resource getResource(String imageName, String uploadDir) throws IOException {
+        File photoDir = new File(Objects.requireNonNull(FileUploadUtil.class.getResource("/")).getPath())
+                .getParentFile()
+                .getParentFile()
+                .getParentFile();
+
+        Path pathToPicture = Paths.get(photoDir.getAbsolutePath() + File.separator + "SparkMartPhotos" + File.separator + uploadDir);
+        File imageFile = new File(pathToPicture.toAbsolutePath() + File.separator + imageName);
+        return new FileSystemResource(imageFile.getAbsolutePath());
+    }
+
+    @GetMapping("/category/{imageName}")
+    public ResponseEntity<byte[]> GetCategoryImage(@PathVariable String imageName) throws IOException {
+        var resource = getResource(imageName, "category-photos");
+        byte[] imageBytes = Files.readAllBytes(resource.getFile().toPath());
         return ResponseEntity.ok()
                 .contentType(MediaType.IMAGE_JPEG)
                 .body(imageBytes);
     }
 
-    @GetMapping("/category/{imageName}")
-    public ResponseEntity<byte[]> GetCategoryImage(@PathVariable String imageName) throws IOException {
-        Resource resource = new ClassPathResource("images/category-photos/" + imageName);
+    @GetMapping("/brand/{imageName}")
+    public ResponseEntity<byte[]> GetBrandImage(@PathVariable String imageName) throws IOException {
+        var resource = getResource(imageName, "brand-photos");
         byte[] imageBytes = Files.readAllBytes(Path.of(resource.getURI()));
         return ResponseEntity.ok()
                 .contentType(MediaType.IMAGE_JPEG)
@@ -39,7 +54,7 @@ public class ImageController {
 
     @GetMapping("/product/{imageName}")
     public ResponseEntity<byte[]> GetProductImage(@PathVariable String imageName) throws IOException {
-        Resource resource = new ClassPathResource("images/product-photos/" + imageName);
+        var resource = getResource(imageName, "product-photos");
         byte[] imageBytes = Files.readAllBytes(Path.of(resource.getURI()));
         return ResponseEntity.ok()
                 .contentType(MediaType.IMAGE_JPEG)
